fixed max-width of form container. Too big before

--- a/src/sections/contact/contact2.css
+++ b/src/sections/contact/contact2.css
@@ -89,18 +89,15 @@
 
 .contact__form-container {
   padding: 40px;
-  max-width: 1000px;
+  max-width: 600px;
   text-align: center;
-  width: 45%;
+  width: 80%;
   border-radius: 5px;
   background: #fff;
   margin: 80px auto 0 auto;
   box-shadow: rgba(51, 201, 255, 0.16) 0px 3px 6px,
     rgba(0, 0, 0, 0.23) 0px 3px 6px;
   border: 1px solid rgb(202, 202, 202);
-}
-
-.contact__form-container.dark {
 }
 
 .contact__form {
@@ -280,8 +277,8 @@ textarea::placeholder {
 
 @media (min-width: 1025px) {
   .contact__form-container {
-    width: 80%;
-    max-width: 800px;
+    width: 90%;
+    max-width: 600px !important;
   }
 }
 
